--- a/VSProject/VSProject.csproj
+++ b/VSProject/VSProject.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>jActs.es5.js</DependentUpon>
     </Content>
     <Content Include="Dist\jActs.js" />
+    <Content Include="html\registerModel.html" />
     <Content Include="html\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
