added object handler _ja(); _jaMath() with random and random range _jaClamp for number clamp

--- a/VSProject/VSProject.csproj
+++ b/VSProject/VSProject.csproj
@@ -86,6 +86,8 @@
     <Content Include="Dist\Framework\js\keys\bind.js" />
     <Content Include="Dist\Framework\js\move\leftAxis.js" />
     <Content Include="Dist\Framework\js\move\topAxis.js" />
+    <Content Include="Dist\Framework\js\objects\create.js" />
+    <Content Include="Dist\Framework\js\objects\find.js" />
     <Content Include="Dist\Framework\js\vars\generic.js" />
     <Content Include="Dist\Framework\js\vars\commum\document.js" />
     <Content Include="Dist\Framework\js\vars\commum\frame.js" />
