added new styled itens to tests

--- a/VSProject/VSProject.csproj
+++ b/VSProject/VSProject.csproj
@@ -82,7 +82,24 @@
     <Content Include="Dist\Framework\css\gameobjects\asteroid\texture\asteroid_texture_6.jpg" />
     <Content Include="Dist\Framework\css\gameobjects\asteroid\texture\asteroid_texture_7.jpg" />
     <Content Include="Dist\Framework\css\gameobjects\asteroid\texture\asteroid_texture_8.jpg" />
+    <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral-min.png" />
+    <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral.jpg" />
+    <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral_infinite.png" />
+    <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral__.jpg" />
+    <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\space-background.css" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\img\minus.png" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\img\plus.png" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\img\ship.png" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\img\source.svg" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\background.mp3" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\die.mp3" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\hit.mp3" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\shoot.mp3" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\shoot_.mp3" />
     <Content Include="Dist\Framework\css\gameobjects\spaceship\my-red-spaceship.css" />
+    <Content Include="Dist\Framework\css\gameobjects\spaceship\my-shoots.css" />
+    <Content Include="Dist\Framework\js\actions\collision.js" />
+    <Content Include="Dist\Framework\js\actions\fileInclude.js" />
     <Content Include="Dist\Framework\js\ambient\prepare.js" />
     <Content Include="Dist\Framework\js\animate\event.js" />
     <Content Include="Dist\Framework\js\beta\tests.js" />
