--- a/VSProject/VSProject.csproj
+++ b/VSProject/VSProject.csproj
@@ -82,6 +82,8 @@
     <Content Include="Dist\Framework\css\gameobjects\asteroid\texture\asteroid_texture_6.jpg" />
     <Content Include="Dist\Framework\css\gameobjects\asteroid\texture\asteroid_texture_7.jpg" />
     <Content Include="Dist\Framework\css\gameobjects\asteroid\texture\asteroid_texture_8.jpg" />
+    <Content Include="Dist\Framework\css\gameobjects\hit\img\smoke.png" />
+    <Content Include="Dist\Framework\css\gameobjects\hit\my-smoke-hit.css" />
     <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral-min.png" />
     <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral.jpg" />
     <Content Include="Dist\Framework\css\gameobjects\space-backgrounds\img\espaco_cideral_infinite.png" />
@@ -93,7 +95,7 @@
     <Content Include="Dist\Framework\css\gameobjects\spaceship\img\source.svg" />
     <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\background.mp3" />
     <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\die.mp3" />
-    <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\hit.mp3" />
+    <Content Include="Dist\Framework\css\gameobjects\hit\mp3\hit.mp3" />
     <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\shoot.mp3" />
     <Content Include="Dist\Framework\css\gameobjects\spaceship\mp3\shoot_.mp3" />
     <Content Include="Dist\Framework\css\gameobjects\spaceship\my-red-spaceship.css" />
